# Summand

./: .gitignore  Cargo.toml  README.md  config.json  watch.sh
.github/: dependabot.yml
.github/workflows/: first-interaction-label.yml
api/: Cargo.toml
crates/summand_api/: Cargo.toml
crates/summand_api/src/: lib.rs  server.rs
crates/summand_app/: Cargo.toml
crates/summand_app/src/: argument.rs  capability.rs  command.rs  compatiblity.rs  core.rs  lib.rs  strategy.rs  summand.rs  validator.rs  variable.rs  workspace.rs
crates/summand_app/src/app/: application.rs  dependency_injection.rs  injectable.rs  mod.rs  service_provider.rs
crates/summand_app/src/config/: config.rs  config_adapter.rs  mod.rs
crates/summand_app/src/config/adapters/: json_config_adapter.rs  mod.rs
crates/summand_app/src/patterns/: interpreter.rs  memento.rs  strategy.rs
crates/summand_app/tests/: app_test.rs  config_test.rs
crates/summand_cli/: Cargo.toml
crates/summand_cli/src/: app.rs  cli.rs  lib.rs  main.rs
crates/summand_cli/src/commands/: add.rs  export.rs  import.rs  list.rs  mod.rs  run.rs  version.rs
crates/summand_data/: Cargo.toml
crates/summand_data/src/: adapters.rs  data_adapter.rs  lib.rs
crates/summand_data/src/adapters/: dockdb_data_adapter.rs  sqlx_data_adapter.rs
crates/summand_node/: Cargo.toml
crates/summand_node/src/: node.rs
crates/summand_parser/: Cargo.toml
crates/summand_parser/src/: adapters.rs  config.rs  lib.rs  parser.rs
crates/summand_parser/src/adapters/: file_adapter.rs  json_adapter.rs
crates/summand_parser/tests/: parser_test.rs
crates/summand_parser/tests/files/: bat_install.json
node/: Cargo.toml
src/: argument.rs  command.rs  core.rs  lib.rs  main.rs  summand.rs  workspace.rs
src/patterns/: adapter.rs  builder.rs  command.rs  iterator.rs  mod.rs  observer.rs
tests/: capability_test.rs  command_test.rs  compatibility_test.rs  run_test.rs  strategy_test.rs  summand_test.rs  variable_test.rs
