[package]
name = "summand_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
mini-redis = "0.4.1"
regex = "1.11.1"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde",
]

[lib]
name = "summand_app"
path = "src/lib.rs"
